--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -121,44 +121,38 @@
        
           <!-- Trendy Products -->
         <div class="flex flex-col items-center text-center transform hover:scale-105">
-          <img src="{% static 'images/star.png' %}" alt="Trendy Products" class="h-16 w-16 mb-4">
           <h3 class="text-2xl font-semibold text-gray-800">Bunda</h3>
-          <p class="text-gray-600 mt-2">We offer the latest products that are trending in the market, ensuring you stay ahead of the curve.</p>
+          <p class="text-gray-600 mt-2">Selamat Ulang tahun ghina, semoga panjang umur dan sehat selalu.</p>
         </div>
         
         <!-- Top Quality -->
         <div class="flex flex-col items-center text-center transform hover:scale-105">
-          <img src="{% static 'images/topquality.png' %}" alt="Top Quality" class="h-16 w-16 mb-4">
           <h3 class="text-2xl font-semibold text-gray-800">Nadhif</h3>
-          <p class="text-gray-600 mt-2">We offer only the best products that meet our quality standards, ensuring satisfaction for every customer.</p>
+          <p class="text-gray-600 mt-2">Happy birthday sayang!!!!!, semoga bisa makin cantik, makin pinter dan makin sayang aku.</p>
         </div>
     
         <!-- Jakarta's Best -->
         <div class="flex flex-col items-center text-center transform hover:scale-105">
-          <img src="{% static 'images/town.png' %}" alt="Jakarta's Best" class="h-16 w-16 mb-4">
           <h3 class="text-2xl font-semibold text-gray-800">Papa</h3>
-          <p class="text-gray-600 mt-2">Our products are sourced from the best suppliers in Jakarta, ensuring you get the best quality products.</p>
+          <p class="text-gray-600 mt-2">Selamat Ulang Tahun ghina, semogaa bisa sehat selalu dan sukses dunia akhirat.</p>
         </div>
 
         <!-- Jakarta's Best -->
         <div class="flex flex-col items-center text-center transform hover:scale-105">
-          <img src="{% static 'images/town.png' %}" alt="Jakarta's Best" class="h-16 w-16 mb-4">
-          <h3 class="text-2xl font-semibold text-gray-800">Papa</h3>
-          <p class="text-gray-600 mt-2">Our products are sourced from the best suppliers in Jakarta, ensuring you get the best quality products.</p>
+          <h3 class="text-2xl font-semibold text-gray-800">Yaya</h3>
+          <p class="text-gray-600 mt-2">Happy Birthday Ghina.</p>
         </div>
 
         <!-- Jakarta's Best -->
         <div class="flex flex-col items-center text-center transform hover:scale-105">
-          <img src="{% static 'images/town.png' %}" alt="Jakarta's Best" class="h-16 w-16 mb-4">
-          <h3 class="text-2xl font-semibold text-gray-800">Papa</h3>
-          <p class="text-gray-600 mt-2">Our products are sourced from the best suppliers in Jakarta, ensuring you get the best quality products.</p>
+          <h3 class="text-2xl font-semibold text-gray-800">Jokowi</h3>
+          <p class="text-gray-600 mt-2">Selamat Ulang Tahun ya neng ghina, semoga makin sayang sama pacarnyaa yaa.</p>
         </div>
 
         <!-- Jakarta's Best -->
         <div class="flex flex-col items-center text-center transform hover:scale-105">
-          <img src="{% static 'images/town.png' %}" alt="Jakarta's Best" class="h-16 w-16 mb-4">
-          <h3 class="text-2xl font-semibold text-gray-800">Papa</h3>
-          <p class="text-gray-600 mt-2">Our products are sourced from the best suppliers in Jakarta, ensuring you get the best quality products.</p>
+          <h3 class="text-2xl font-semibold text-gray-800">Prabowo</h3>
+          <p class="text-gray-600 mt-2">Ya, Ghina selamat Ulang Tahun, semoga panjang umur dan sehat selalu saya tunggu undangan nikahnya ya.</p>
         </div>
         
         
@@ -191,7 +185,7 @@
             </div>
             <div class="mt-20 text-center">
               <h3 class="text-2xl font-semibold text-gray-800 mb-4">Lucu Banget</h3>
-              <p class="text-gray-600">Coba Liat foto diatas lucu banget kan, sayang walapun aku suka ngatain kamu aku sangat sayang sama kamu.</p>
+              <p class="text-gray-600">Coba Liat foto diatas lucu banget kan, sayang walapun aku suka ngatain kamu tapii, aku sayang banget sama kamu.</p>
             </div>
           </div>
     
@@ -219,8 +213,8 @@
         <div class="overflow-hidden relative flex justify-center items-center">
           <div class="flex transition-transform duration-500 ease-in-out" id="slider" style="width: calc(100% * 3); ">
             <img src="{% static 'images/header1.png' %}" alt="slide1" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;">
-            <a href="https://www.youtube.com/watch?v=Xj0Jtjg3lHQ" target="_blank" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;">
-              <img src="{% static 'images/header2.png' %}" alt="slide2" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;">
+            <a href="https://drive.google.com/drive/folders/1tFRho6QseN6KFxWT1Lhw6Ra3K1fIDtTJ?usp=sharing" target="_blank" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;">
+              <img src="{% static 'images/clickme.png' %}" alt="slide2" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;">
             </a>
             {% comment %} <img src="{% static 'images/header1.png' %}" alt="slide2" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;"> {% endcomment %}
             <img src="{% static 'images/header1.png' %}" alt="slide3" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;">
