--- a/main/templates/wish.html
+++ b/main/templates/wish.html
@@ -285,7 +285,7 @@
     </h1>
     
     <p class="subtext">
-      Web ini dibuat <span class="highlight">Penuh kasih sayang </span> tanpa garansi apapun.
+      Web ini dibuat <span class="highlight">Penuh kasih sayang </span> dengan garansi penuh.
     </p>
   
   <!-- FAQ Section -->
@@ -360,17 +360,10 @@
       </div>
 
       <div class="faq-card">
-        <h1 class="text-3xl md:text-4xl font-extrabold text-gray-800 text-center mb-10 mt-2">Naia</h1>
-        <h3>HAPPY BIRTHDAY GHINAAA si food loverss!! 🥳 semoga panjang umur, sehat selalu, dan makin jadi orang yang sabarann yaa. semoga ig makanan lu viral biar kita kebagian giveaway nihh wkwk 🤞🏼 langgeng terus sama cowo lu, pokoknya yg terbaikk buat ghinaa! lov💗💗</h3>
-        <p>klo nonton filmm jgn di dalem mimpii😭</p>
+        <h1 class="text-3xl md:text-4xl font-extrabold text-gray-800 text-center mb-10 mt-2">Rakun</h1>
+        <h3>wei anjg hbd ye semoga panjang umur dan gak marah2 mulu kurang2in batunya</h3>
+        <p>semoga gak makin batu yak</p>
       </div>
-
-      <div class="faq-card">
-        <h1 class="text-3xl md:text-4xl font-extrabold text-gray-800 text-center mb-10 mt-2">Naia</h1>
-        <h3>HAPPY BIRTHDAY GHINAAA si food loverss!! 🥳 semoga panjang umur, sehat selalu, dan makin jadi orang yang sabarann yaa. semoga ig makanan lu viral biar kita kebagian giveaway nihh wkwk 🤞🏼 langgeng terus sama cowo lu, pokoknya yg terbaikk buat ghinaa! lov💗💗</h3>
-        <p>klo nonton filmm jgn di dalem mimpii😭</p>
-      </div>
-
 
 
     </div>
