--- a/main/templates/clue.html
+++ b/main/templates/clue.html
@@ -498,7 +498,7 @@
             <div class="flip-card-back">
               <div class="product-info">
                 <h2>Special Message</h2>
-                <p>SIAP SIAP YAA BESOK AKU JEMPUT PAKE BAJUNYA SESUAI YANG KAMU SUKA AJA YA CANTIK</p>
+                <p>SIAP SIAP YAA AKU JEMPUT AKU NGGA ADA KUIS ALIN AKU OTWNYA KE KAMU HEHEHE</p>
               </div>
             </div>
           </div>
