--- a/main/templates/wish.html
+++ b/main/templates/wish.html
@@ -365,6 +365,12 @@
         <p>semoga gak makin batu yak</p>
       </div>
 
+      <div class="faq-card">
+        <h1 class="text-3xl md:text-4xl font-extrabold text-gray-800 text-center mb-10 mt-2">Isaa</h1>
+        <h3>hii ghina husniah BARAKALLAH FII UMRIK!!!!! kt baru kenal gak begitu lama dan baruu dekett TPPP mkazie sdh berteman dgn gweh ❤️❤️ im glad we get to know each other and be friends!!!! jjure lu dan teman2 bray yg bikin gw semangat menjalani kuliah hari2 eak ☝️ngmg2 kuliah, MAKASIH BANYAKKK ATAS JASA JASA MU DI SEMESTER 3 INI......... dari bantuin akuntansi, srtdp, dan matkul lainnya mwah luh baik bgt rill 😘😘 tetap waras yeah... masih ada semester2 yg akan datang 😊 semangat jg pertufesannya sebentar lagi arc ini selesai kok (insyaAllah) jgn lupa istirahat dan smgt slalu menjalani hari harinya!!!! <333 loveu</h3>
+        <p>SEMOGA LU 🫵 sehat selalu... banyak hal baik yg datang ke lu... jadi pribadi yg lebih baik (always improving)... sukses terus... makin deket sm Allah dan imannya makin kuat 🤲... semua kebaikan lu dibalas... all the best intinya 🧘 AND OFC SMOGA KT BS BERTEMAN TRS DGN BAIK DAN SEHAT🧏‼️/p>
+      </div>
+
 
     </div>
   </div>
