--- a/main/templates/wish.html
+++ b/main/templates/wish.html
@@ -320,6 +320,13 @@
         <p>lancar sukses kuliahnya yaa, semangat for menjalani hari harinya, sehat selaluuu, happy selaluu 🫶🏻🫶🏻        </p>
       </div>
 
+
+      <div class="faq-card">
+        <h1 class="text-3xl md:text-4xl font-extrabold text-gray-800 text-center mb-10 mt-2">CLUE 2</h1>
+        <h3>-</h3>
+        <p>BELIIN AKU HADIAH DAN PAKE BAJU BIRU</p>
+      </div>
+
       <div class="faq-card">
         <h1 class="text-3xl md:text-4xl font-extrabold text-gray-800 text-center mb-10 mt-2">Naura</h1>
         <h3>apa yaa semoga apa yg lu impikan semua terwujud Aamiin dan semoga lu tetep effort dalam hal segala apapun as always</h3>
