--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -203,8 +203,6 @@
       </div>
     </div>
     
-    
-
 
     <h2 class="text-3xl md:text-4xl font-extrabold text-gray-800 text-center mb-2 mt-8">Favorite Memories</h2>
     <div class="flex-grow" style="margin-top: -48px;" data-aos="fade-up" data-aos-duration="1000">
@@ -213,7 +211,7 @@
         <div class="overflow-hidden relative flex justify-center items-center">
           <div class="flex transition-transform duration-500 ease-in-out" id="slider" style="width: calc(100% * 3); ">
             <img src="{% static 'images/header1.png' %}" alt="slide1" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;">
-            <a href="https://drive.google.com/drive/folders/1tFRho6QseN6KFxWT1Lhw6Ra3K1fIDtTJ?usp=sharing" target="_blank" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;">
+            <a href="https://drive.google.com/drive/folders/1tFRho6QseN6KFxWT1Lhw6Ra3K1fIDtTJ" target="_blank" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;">
               <img src="{% static 'images/clickme.png' %}" alt="slide2" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;">
             </a>
             {% comment %} <img src="{% static 'images/header1.png' %}" alt="slide2" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;"> {% endcomment %}
