--- a/main/templates/wish.html
+++ b/main/templates/wish.html
@@ -287,7 +287,11 @@
     <p class="subtext">
       Web ini dibuat <span class="highlight">Penuh kasih sayang </span> dengan garansi penuh.
     </p>
-  
+
+    <p class="subtext">
+      Aku tau Kamu <span class="highlight">Belum Mandi</span> cepet mandi.
+    </p>
+    
   <!-- FAQ Section -->
   <div class="faq-section">
     <div class="faq-container">
