--- a/main/templates/wish.html
+++ b/main/templates/wish.html
@@ -382,6 +382,15 @@
         <p>SEMOGA LU 🫵 sehat selalu... banyak hal baik yg datang ke lu... jadi pribadi yg lebih baik (always improving)... sukses terus... makin deket sm Allah dan imannya makin kuat 🤲... semua kebaikan lu dibalas... all the best intinya 🧘 AND OFC SMOGA KT BS BERTEMAN TRS DGN BAIK DAN SEHAT🧏‼️/p>
       </div>
 
+      <div class="faq-card">
+        <h1 class="text-3xl md:text-4xl font-extrabold text-gray-800 text-center mb-10 mt-2">Ayaa</h1>
+        <h3>KOK LU DAH 20........ dem..... slamat ulang tahun yh kakakk, smoga smoga😁😁😁😁</h3>
+        <p>semoga kamu selalu happy happy terus jgn pernah sedih sedih, dan smoga ga nganggur terus gws</p>
+      </div>
+
+
+      
+
 
     </div>
   </div>
