--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -211,7 +211,7 @@
         <div class="overflow-hidden relative flex justify-center items-center">
           <div class="flex transition-transform duration-500 ease-in-out" id="slider" style="width: calc(100% * 3); ">
             <img src="{% static 'images/header1.png' %}" alt="slide1" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;">
-            <a href="https://drive.google.com/file/d/1ua-VMkpaBZzPjtntIri9-nfIq_zjP0bl/view?usp=drive_link" target="_blank" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;">
+            <a href="https://drive.google.com/drive/folders/1tFRho6QseN6KFxWT1Lhw6Ra3K1fIDtTJ" target="_blank" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;">
               <img src="{% static 'images/clickme.png' %}" alt="slide2" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;">
             </a>
             {% comment %} <img src="{% static 'images/header1.png' %}" alt="slide2" class="h-96 w-full md:w-80 object-cover rounded-xl " style="min-width: 100%;"> {% endcomment %}
